<resources>
    <string name="app_name" translatable="false">ProfAbsence</string>
    <!-- Descriptions pour les icônes -->
    <string name="logo_desc" translatable="false">Logo de l\'application</string>
    <string name="menu_desc" translatable="false">Menu principal</string>
    <string name="absences_desc" translatable="false">Icône pour gérer les absences</string>
    <string name="reclamations_desc" translatable="false">Icône pour suivre les réclamations</string>
    <string name="users_desc" translatable="false">Icône pour gérer les utilisateurs</string>
    <string name="notifications_desc" translatable="false">Icône pour les notifications</string>

    <!-- Titres et textes des cartes -->
    <string name="absences_title" translatable="false">Absences</string>
    <string name="absences_subtitle" translatable="false">Gérer les absences</string>
    <string name="reclamations_title" translatable="false">Réclamations</string>
    <string name="reclamations_subtitle" translatable="false">Suivre les réclamations</string>
    <string name="users_title" translatable="false">Utilisateurs</string>
    <string name="users_subtitle" translatable="false">Gérer les utilisateurs</string>

    <!-- Notifications -->
    <string name="notifications_text" translatable="false">Vous avez %1$d notifications</string>

    <!-- Actions -->
    <string name="view_details" translatable="false">Voir les détails</string>
    <string name="logout" translatable="false">Déconnexion</string>

    <!-- Messages génériques -->
    <string name="loading" translatable="false">Chargement...</string>
    <string name="error" translatable="false">Une erreur s\'est produite</string>
    <string name="total_enseignants">Total enseignants</string>
    <string name="total_salles">Total salles</string>
    <string name="ajouter_absence">Ajouter une absence</string>
    <string name="consulter_emplois">Consulter emplois</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_de_l_enseignant">Image de l\'enseignant</string>
    <string name="total_des_absences">Total des absences:</string>
    <string name="_88888888">88888888</string>
    <string name="nom_de_l_enseignant">Nom de l\'enseignant</string>
    <string name="rechercher">Rechercher</string>
    <string name="liste_des_absences">Liste des Absences</string>
    <string name="ajouter_une_absence">Ajouter une absence</string>
    <string name="absence">Absence</string>
    <string name="emplois">Emplois</string>
    <string name="ajout_d_absence">Ajout d\'absence</string>
    <string name="nom_du_professeur">Nom du professeur</string>
    <string name="date_de_l_absence">Date de l\'absence</string>
    <string name="jj_mm_aaaa">jj/mm/aaaa</string>
    <string name="heure_de_d_but">Heure de début</string>
    <string name="hh_mm">hh:mm</string>
    <string name="heure_de_fin">Heure de fin</string>
    <string name="classe">Classe</string>
    <string name="entrez_la_classe">Entrez la classe</string>
    <string name="statut_de_l_absence">Statut de l\'absence</string>
    <string name="salle">Salle</string>
    <string name="entrez_le_salle">Entrez le salle</string>
    <string name="soumettre">Soumettre</string>
    <string name="annuler">Annuler</string>
    <string name="formulaire_utilisateur">Formulaire Utilisateur</string>
    <string name="cin_de_l_utilisateur">CIN de l\'utilisateur</string>
    <string name="entrez_le_cin_de_l_utilisateur">Entrez le CIN de l\'utilisateur</string>
    <string name="nom_complet">Nom complet</string>
    <string name="entrez_le_nom_complet_de_l_utilisateur">Entrez le nom complet de l\'utilisateur</string>
    <string name="email_de_l_utilisateur">Email de l\'utilisateur</string>
    <string name="entrez_l_email_de_l_utilisateur">Entrez l\'email de l\'utilisateur</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="entrez_le_mot_de_passe_de_l_utilisateur">Entrez le mot de passe de l\'utilisateur</string>
    <string name="r_le_de_l_utilisateur">Rôle de l\'utilisateur</string>
    <string name="liste_des_r_clamations">Liste des Réclamations</string>
    <string name="modifier_une_absence">Modifier une absence</string>
    <string name="entrez_la_salle">Entrez la salle</string>
    <string name="modifier_de_r_clamation">Modifier de Réclamation</string>
    <string name="d_tails_de_la_s_ance">Détails de la Séance :</string>
    <string name="informations_de_la_r_clamation">informations de la Réclamation :</string>
    <string name="date_de_r_clamation">Date de réclamation</string>
    <string name="d_crivez_votre_r_clamation">Décrivez votre réclamation</string>
    <string name="valider">Valider</string>
    <string name="modifier_un_utilisateur">Modifier un utilisateur</string>
    <string name="gestion_des_emplois_du_temps">Gestion des Emplois du Temps</string>
    <string name="importer_un_fichier">Importer un fichier</string>
    <string name="voir_rapports">Voir Rapports</string>
    <string name="voir_r_clamations">Voir Réclamations</string>
    <string name="voir_absences">Voir Absences</string>
    <string name="nombre_d_absences_pour_le_jour_s_lectionn_0">Nombre d\'absences pour le jour sélectionné : 0</string>
    <string name="envoyer_une_r_clamation">Envoyer une réclamation</string>
    <string name="ajouter_un_utilisateur">Ajouter un utilisateur</string>
    <string name="cin">cin</string>
    <string name="nombre_d_absences">Nombre d\'absences</string>
    <string name="statut">Statut</string>
    <string name="passer_une_r_clamation">Passer une réclamation</string>
    <string name="date">Date:</string>
    <string name="date_de_la_seance">Date de la seance:</string>
    <string name="supprimer">Supprimer</string>
    <string name="editer">Editer</string>
    <string name="r_clamation">Réclamation :</string>
    <string name="approuver">approuver</string>
    <string name="rejeter">rejeter</string>
    <string name="ic_ne_fichier">Icône fichier</string>
    <string name="nom_du_fichier">Nom du fichier</string>
    <string name="heure">Heure</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="nom_de_l_utilisateur">Nom de l\'utilisateur</string>
    <string name="email_exemple_com">email@exemple.com</string>
    <string name="accueil">Accueil</string>
    <string name="r_clamations">Réclamations</string>
    <string name="utilisateurs">Utilisateurs</string>
    <string name="rapport">rapport</string>
    <string name="param_tres">Paramètres</string>
    <string name="partager">Partager</string>
    <string name="a_propos_de_nous">A propos de nous</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="voir_emplois">Voir Emplois</string>
    <string name="demande_de_r_clamation">Demande de Réclamation</string>
    <string name="mes_absences">Mes absences</string>
    <string name="bonjour">Bonjour 👋</string>
    <string name="mes_absences_aujourd_hui">Mes absences Aujourd\'hui</string>
    <string name="aucune_absence_afficher">Aucune absence à afficher</string>
    <string name="voir_mes_r_clamations">Voir mes réclamations</string>
    <string name="mes_r_clamations">Mes Réclamations</string>
    <string name="voir_mes_absences">Voir mes absences</string>
</resources>

