<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icc_home"
        android:title="@string/accueil" />
    <item
        android:id="@+id/nav_absences"
        android:icon="@drawable/icc_absence"
        android:title="@string/absence"/>
    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/icc_users"
        android:title="@string/utilisateurs"/>
    <item
        android:id="@+id/nav_claim"
        android:icon="@drawable/claim"
        android:title="@string/reclamations_title"
        />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/icc_chart"
        android:title="@string/rapport"
        />

</menu>