<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">



    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icc_home"
            android:title="@string/accueil" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icc_settings"
            android:title="@string/param_tres" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/icc_share"
            android:title="@string/partager" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icc_info"
            android:title="@string/a_propos_de_nous" />

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icc_logout"
                android:title="@string/deconnexion" />
        </menu>
    </item>

</menu>
